# SystemMonitorApp

./: CMakeLists.txt  README.md  database.env  docker-compose.yaml  main.cpp
BackEnd/Auth/: User.cpp  User.h
BackEnd/Auth/Login/: Login.cpp  Login.h
BackEnd/Auth/Register/: Register.cpp  Register.h  bcrypt.h
BackEnd/GetSystemResources/: UsageProvider.cpp  UsageProvider.h
BackEnd/GetSystemResources /GetCpuUsage/: GetCpuUsage.cpp  GetCpuUsage.h
BackEnd/GetSystemResources/GetCpuUsage/: GetCpuUsage.cpp  GetCpuUsage.h
BackEnd/GetSystemResources/GetGpuUsage/: GetGpuUsage.cpp  GetGpuUsage.h
BackEnd/GetSystemResources/GetInternetUsage/: GetInternetUsage.cpp  GetInternetUsage.h
BackEnd/GetSystemResources/GetRamUsage/: GetRamUsage.cpp  GetRamUsage.h
BackEnd/PQXXConnection/PQXXSingleton/: PQXXSingletonConnection.h
BackEnd/PQXXConnection/ReadEnvFile/: ReadEnvFile.h
BackEnd/Tables/: ReadSqlTables.cpp  ReadSqlTables.h  Tables.SQL
FrontEnd/LogInWindow/: LogInWindow.cpp  LogInWindow.h
FrontEnd/MainWindowUser/: MainWindow.cpp  MainWindow.h
FrontEnd/MainWindowUser/CpuUsageWidget/: CpuUsage.cpp  CpuUsage.h
FrontEnd/RegisterWindow/: RegisterWindow.cpp  RegisterWindow.h
